# bipedal_training

./: LICENSE  README.md
eigen_training/: CMakeLists.txt  main.cpp  train.hpp
forward_kine/: CMakeLists.txt  main.cpp  plot.hpp  robot_model.hpp
inv_pend_walk/: CMakeLists.txt  foot_step_planner.hpp  motor_interface.hpp  show.plt  spline.plt
inv_pend_walk/test/: check_foot_step_planner.cpp  check_motor_interface.cpp
pinocchio_training/: CMakeLists.txt  Dockerfile  install_meshcat.sh  install_npm_httpserver.sh  load_model.py  meshcat_vis.py  pino.py  run_pino.bash
qp_training/: CMakeLists.txt  noconstraint.cpp  qp_train.cpp  qp_train.hpp  sample_revise.cpp  show.plt
